syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply);

    rpc PerfectWeight(UserData) returns (PerfectUser);
}

message UserData{
    int32 weight = 1;
    int32 height = 2;
}

message PerfectUser{
    int32 perfectWeight = 1;
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings.
message HelloReply {
    string message = 1;
}
